@@ -1,3 +1,7 @@
+2008-06-18  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/fit.c: Dynamic allocation for fit script string.
+
 2008-06-17  Ethan Merritt  <merritt@u.washington.edu>
 
 	* docs/gnuplot.doc docs/plotstyles.gnu demo/cities.dat:
